loadknowledge know also saves surface formes pattern search now searches on lowercase index and returns normal case text relfinder can load new trainind data format